--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ $RECYCLE.BIN/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
 # Idea folder
 .idea/
 
